--- a/section1/inlinecss.html
+++ b/section1/inlinecss.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1 style="color:red;font-size: 60px;">Inline css is used for individual tag</h1>
-    <h3 style="color:blue; background-color: yellow;" >not recommended for designing whole page</h13
+    <h3 style="color:blue; background-color: yellow;" >not recommended for designing whole page</h1>
 </body>
 </html>
