--- a/section1/assignment1.html
+++ b/section1/assignment1.html
@@ -159,7 +159,7 @@
         <form
           name="myForm"
           action="javascript:void(0)"
-          onsubmit="return alert('OKAY')"
+          onsubmit="return alert('You are Successfully Registered !')"
           method="post"
         >
           <p style="display: inline; font-size: 20px">
