--- a/section1/loginpage.html
+++ b/section1/loginpage.html
@@ -1,30 +1,25 @@
-
-  
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify Login</title>
 
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200italic,300,300italic,regular,italic,600,600italic,700,700italic,800,800italic,900,900italic"
         rel="stylesheet" />
-        
-
-
 
     <style>
         * {
             font-family: Nunito;
         }
 
-
         body {
             /* background: url(https://images.unsplash.com/photo-1505740420928-5e560c06d30e?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bXVzaWMlMjBiYWNrZ3JvdW5kfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80) no-repeat; */
-            background: linear-gradient(to right bottom, #6aeaf3cc, #6dfa359d), url(https://free4kwallpapers.com/uploads/originals/2019/06/25/headphones-black-and-white-wallpaper.jpg) no-repeat;
+            background: linear-gradient(to right bottom, #6aeaf3cc, #6dfa359d),
+                url(https://free4kwallpapers.com/uploads/originals/2019/06/25/headphones-black-and-white-wallpaper.jpg) no-repeat;
             /* background: linear-gradient(to right bottom, #0000004d, #0000004d), url(https://images.unsplash.com/photo-1505740420928-5e560c06d30e?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bXVzaWMlMjBiYWNrZ3JvdW5kfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80) no-repeat; */
             background-size: cover;
             height: 80vh;
@@ -38,7 +33,8 @@
             border-radius: 10px;
             background-color: rgb(41, 41, 41);
             color: white;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19),
+                0 6px 6px rgba(0, 0, 0, 0.23);
         }
 
         .logo {
@@ -59,8 +55,9 @@
         }
 
         .my-input:focus {
-            background-color:rgba(243, 241, 241, 0.918);
-            box-shadow: 0 5px 20px rgba(146, 226, 247, 0.767), 0 3px 6px rgba(247, 241, 241, 0.301);
+            background-color: rgba(243, 241, 241, 0.918);
+            box-shadow: 0 5px 20px rgba(146, 226, 247, 0.767),
+                0 3px 6px rgba(247, 241, 241, 0.301);
         }
 
         .my-btn {
@@ -82,45 +79,41 @@
         .my-input {
             border-radius: 30px;
             border: none;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.19), 0 3px 6px rgba(0, 0, 0, 0.23);
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.19),
+                0 3px 6px rgba(0, 0, 0, 0.23);
             outline: none;
         }
 
         .my-link {
             margin-top: 30px;
-            text-align: center; 
+            text-align: center;
             font-size: 0.9em;
-            color: rgb(165, 162, 162); 
-            text-decoration: none; 
-            display: block; 
-            margin-top: 20px ;
+            color: rgb(165, 162, 162);
+            text-decoration: none;
+            display: block;
+            margin-top: 20px;
         }
-        
     </style>
-
 </head>
 
 <body>
-
     <div class="my-card">
         <img class="logo" src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_CMYK_Green.png"
-            alt="">
-        <h2 style="text-align: center;">Sign in</h2>
+            alt="" />
+        <h2 style="text-align: center">Sign in</h2>
 
-        <input type="text" class="my-input" placeholder="Username">
-        <input type="text" class="my-input" placeholder="Password">
+        <input type="text" class="my-input" placeholder="Username" />
+        <input type="text" class="my-input" placeholder="Password" />
 
-        <div style="margin-top: 10px;">
-            <input type="checkbox">
+        <div style="margin-top: 10px">
+            <input type="checkbox" />
             <span>stay signed in</span>
         </div>
 
         <button class="my-btn">SIGN IN</button>
 
         <a class="my-link" href="#">Forgot Password?</a>
-
     </div>
-
 </body>
 
 </html>
